axum-enumroutes/tests/ui/fail_route_attr_invalid_args.stderr
error: expected identifier
  --> tests/ui/fail_route_attr_invalid_args.rs:13:36
   |
13 |     #[get("/", handler = _handler, "")]
   |                                    ^^
